# dark_compiler

./: .cursorignore  .gitignore  LICENSE  README.md
dark_orchestrator/: pyproject.toml  run.sh  test_run.sh  test_run_1000_cwe125.sh  test_run_100_realistic.sh  test_run_realistic.sh
dark_orchestrator/dark_orchestrator/: __init__.py  cleanup.py  cli.py  cxx_adapter.py  diff_parser.py  io.py  metrics.py  models.py  naming.py  pipeline.py  state.py  tracer.py
dark_orchestrator/dark_orchestrator.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dark_orchestrator/dark_smoke_one/metrics/: yield_summary.json  yield_timeseries.jsonl
dark_orchestrator/dark_smoke_one/records/: commit_summary.jsonl
dark_orchestrator/dark_smoke_one/state/: checkpoint.json  completed_items.jsonl
dark_orchestrator/dark_smoke_realistic/metrics/: yield_summary.json  yield_timeseries.jsonl
dark_orchestrator/dark_smoke_realistic/records/: commit_summary.jsonl  function_status.jsonl
dark_orchestrator/dark_smoke_realistic/state/: checkpoint.json  completed_items.jsonl
dark_orchestrator/test_inputs/: README.md  accepted_patches.jsonl  build_1000_cwe125.py  build_100_realistic.py
dark_orchestrator/test_inputs/1000_cwe125/: README.md  accepted_patches.jsonl  manifest.tsv  sampling_stats.json
dark_orchestrator/test_inputs/100_realistic/: README.md  accepted_patches.jsonl  manifest.tsv
dark_orchestrator/test_inputs/input_realistic_test/: README.md  accepted_patches.jsonl
dark_orchestrator/test_inputs/smoke_one/: accepted_patches.jsonl
(+229 files in other folders)
